[package]
name = "cargo-equip"
version = "0.20.2-alpha.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Cargo subcommand to bundle your code into one `.rs` file for competitive programming."
repository = "https://github.com/qryxip/cargo-equip"
keywords = ["competitive", "cli", "windows"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
anyhow = "1.0.72"
atty = "0.2.14"
camino = { version = "1.1.6", features = ["serde1"] }
cargo-util = "0.1.2"
cargo_metadata = "0.14.2"
cfg-expr = "0.9.1"
derive_more = "0.99.17"
dirs-next = "2.0.0"
fixedbitset = "0.4.2"
if_chain = "1.0.2"
indoc = "1.0.9"
itertools = "0.10.5"
krates = "0.8.1"
la-arena = "0.3.1"
maplit = "1.0.2"
petgraph = "0.6.3"
prettytable-rs = "0.10.0"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
quote = "1.0.32"
ra_ap_paths = "=0.0.205"
ra_ap_proc_macro_api = "=0.0.205"
ra_ap_span = "0.0.205"
ra_ap_tt = "=0.0.205"
rand = "0.8.5"
rustminify = "0.2.0"
rustc-hash = "1.1.0"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
spdx = "0.6.2"
structopt = "0.3.26"
strum = { version = "0.25.0", features = ["derive"] }
syn = { version = "1.0.109", features = ["extra-traits", "full", "parsing", "visit"] }
tap = "1.0.1"
tempfile = "3.7.0"
termcolor = "1.2.0"
toml = "0.7.6"
toml_edit = "0.5.0"
which = "4.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
insta = "1.31.0"
md5 = "0.7.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
