[package]
name = "cargo_equip_marker"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides a marker attribute for `cargo-equip`."
repository = "https://github.com/qryxip/cargo-equip"
keywords = []
categories = []

[lib]
name = "cargo_equip"
proc-macro = true

[dependencies]
