[package]
name = "solutions"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
fixedbitset = "0.4.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
multimap = { version = "0.8.3", default-features = false }
permutohedron = "0.2.4"
proconio = { version = "0.4.3", features = ["derive"] }
rustc-hash = "1.1.0"
smallvec = "1.6.1"
strsim = "0.10.0"
whiteread = "0.5.0"
